Updated phone number and email address

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="flex flex--column-center">
           <p class="nav--text">Talk to recruiter</p>
           <a
-            href="tel:8889993851"
+            href="tel:6306754014"
             class="nav--text text--underline text--regular"
-            >888 999 3851</a
+            >+1 (630) 675-4014</a
           >
         </div>
       </nav>
@@ -263,13 +263,13 @@
           >
         </div>
         <div class="flex flex--column-center footer--icon-wrapper btn--anim">
-          <a href="mailto:guerro@truckaway.com">
+          <a href="mailto:guerro@truckwaycartage.com">
             <img src="imgs/email-icon.svg" alt="Email icon"
           /></a>
           <a
-            href="mailto:guerro@truckaway.com"
+            href="mailto:guerro@truckwaycartage.com"
             class="text--white text--underline-none"
-            >guerro@truckaway.com</a
+            >guerro@truckwaycartage.com</a
           >
         </div>
       </div>
