--- a/index.html
+++ b/index.html
@@ -241,35 +241,35 @@
           ><img src="imgs/logo.png" class="logo" alt="Company Logo"
         /></a>
         <div class="flex flex--column-center footer--icon-wrapper btn--anim">
-          <a href="tel:8889993851"
+          <a href="tel:6306754014"
             ><img src="imgs/phone-icon.svg" alt="Phone icon"
           /></a>
-          <a class="text--white text--underline-none" href="tel:8889993851"
-            >888 999 3851</a
+          <a class="text--white text--underline-none" href="tel:6306754014"
+            >+1 (630) 675-4014</a
           >
         </div>
         <div class="flex flex--column-center footer--icon-wrapper btn--anim">
           <a
-            href="https://www.google.com/maps/search/80+Gilberts,+Elgin+IL+60206/@42.1040902,-88.3876678,14z/data=!3m1!4b1"
+            href="https://www.google.com/maps/place/17N750+Galligan+Rd,+Gilberts,+IL+60136,+Sjedinjene+Ameri%C4%8Dke+Dr%C5%BEave/@42.1212509,-88.3778267,17z/data=!3m1!4b1!4m5!3m4!1s0x880f1113d84dfb5d:0xae96c0544ce9203a!8m2!3d42.1212469!4d-88.375638"
             target="_blank"
           >
             <img src="imgs/location-icon.svg" alt="Location icon"
           /></a>
           <a
-            href="https://www.google.com/maps/search/80+Gilberts,+Elgin+IL+60206/@42.1040902,-88.3876678,14z/data=!3m1!4b1"
+            href="https://www.google.com/maps/place/17N750+Galligan+Rd,+Gilberts,+IL+60136,+Sjedinjene+Ameri%C4%8Dke+Dr%C5%BEave/@42.1212509,-88.3778267,17z/data=!3m1!4b1!4m5!3m4!1s0x880f1113d84dfb5d:0xae96c0544ce9203a!8m2!3d42.1212469!4d-88.375638"
             class="text--white text--underline-none"
             target="_blank"
-            >80 Gilberts, Elgin IL 60206</a
+            >17N750 Galligan Rd, Gilberts Il, 60136</a
           >
         </div>
         <div class="flex flex--column-center footer--icon-wrapper btn--anim">
-          <a href="mailto:guerro@truckwaycartage.com">
+          <a href="mailto:guero@truckwaycartage.com">
             <img src="imgs/email-icon.svg" alt="Email icon"
           /></a>
           <a
-            href="mailto:guerro@truckwaycartage.com"
+            href="mailto:guero@truckwaycartage.com"
             class="text--white text--underline-none"
-            >guerro@truckwaycartage.com</a
+            >guero@truckwaycartage.com</a
           >
         </div>
       </div>
