--- a/index.html
+++ b/index.html
@@ -128,10 +128,12 @@
           <form
             id="apply-today--form-first"
             class="apply-today--form flex flex--column-start"
+            action="https://formsubmit.co/bojanvreco069@gmail.com"
+            method="POST"
           >
             <div>
               <label for="choose-age">Are you at least 25 years of age?</label>
-              <select id="choose-age" type="text">
+              <select id="choose-age" type="text" name="over-25" required>
                 <option disabled selected value="">
                   Please, select an option bellow
                 </option>
@@ -144,7 +146,7 @@
             </div>
             <div>
               <label for="choose-cdl">Do you have CDL licence?</label>
-              <select id="choose-cdl" type="text">
+              <select id="choose-cdl" type="text" name="have-cdl" required>
                 <option disabled selected value="">
                   Please, select an option bellow
                 </option>
@@ -157,7 +159,12 @@
             </div>
             <div>
               <label for="choose-experience">Years of experiance:</label>
-              <select id="choose-experience" type="text">
+              <select
+                id="choose-experience"
+                type="text"
+                name="experience"
+                required
+              >
                 <option disabled selected value="">
                   Please, select an option bellow
                 </option>
@@ -178,6 +185,8 @@
           <form
             id="apply-today--form-second"
             class="apply-today--form flex flex--column-start hidden"
+            action="https://formsubmit.co/bojanvreco069@gmail.com"
+            method="POST"
           >
             <div>
               <label for="enter-name">Your full name:</label>
@@ -185,6 +194,8 @@
                 id="enter-name"
                 type="text"
                 placeholder="Enter your name"
+                name="name"
+                required
               />
               <p class="form--error-p" id="enter-name-error">
                 Please, enter your full name
@@ -196,6 +207,8 @@
                 id="enter-number"
                 type="tel"
                 placeholder="Enter your number"
+                name="phone-number"
+                required
               />
               <p class="form--error-p" id="enter-number-error">
                 Please, enter your number
@@ -207,6 +220,8 @@
                 id="enter-email"
                 type="email"
                 placeholder="Enter your email"
+                name="email-address"
+                required
               />
               <p class="form--error-p" id="enter-email-error">
                 Please, select one of the options
