Loading spinner after form submit

--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
   <body>
     <div class="overlay flex flex--center hidden">
       <div class="modal text--center">
-        <h3>Application is successfully submitted!</h3>
-        <button class="bkg--red btn--modal" type="button">Close</button>
+        <div class="loading-spinner">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </div>
     <header class="container">
